--- a/dl.html
+++ b/dl.html
@@ -34,9 +34,8 @@
   </head>
   
   <body>
-    Seems your browser doesn't support Javascript!<br>
     <a class="language" href="https://github.com/miku-nyan/Overchan-Android/releases" data-language="en">Release Archive on GitHub</a><br>
-    <a class="language" href="en.html" data-language="en">English</a><br>
-    <a class="language" href="ru.html" data-language="ru">Russian</a>
+    <a class="language" href="ru.html" data-language="ru">Russian</a><br>
+    <a class="language" href="en.html" data-language="en">English</a>
   </body>
 </html>
