--- a/index.html
+++ b/index.html
@@ -34,8 +34,7 @@
   </head>
   
   <body>
-    Seems your browser doesn't support Javascript!<br>
-    <a class="language" href="en.html" data-language="en">English</a><br>
-    <a class="language" href="ru.html" data-language="ru">Russian</a>
+    <a class="language" href="ru.html" data-language="ru">Russian</a><br>
+    <a class="language" href="en.html" data-language="en">English</a>
   </body>
 </html>
