--- a/dl.html
+++ b/dl.html
@@ -25,6 +25,10 @@
             {
               code : 'ru',
               path : 'ru.html#Download'
+            },
+            {
+              code : 'de',
+              path : 'de.html#Download'
             }
           ]
         });
@@ -35,7 +39,8 @@
   
   <body>
     <a class="language" href="https://github.com/miku-nyan/Overchan-Android/releases" data-language="en">Release Archive on GitHub</a><br>
-    <a class="language" href="ru.html" data-language="ru">Russian</a><br>
-    <a class="language" href="en.html" data-language="en">English</a>
+    <a class="language" href="ru.html" data-language="ru">Русский</a><br>
+    <a class="language" href="en.html" data-language="en">English</a><br>
+    <a class="language" href="de.html" data-language="de">Deutsch</a>
   </body>
 </html>
