--- a/en.html
+++ b/en.html
@@ -57,7 +57,8 @@
             <!-- <a href="yastore://details?id=nya.miku.wishmaster">Yandex.Store</a><br> -->
             <a href="https://github.com/miku-nyan/Overchan-Android/releases">Release Archive</a><br>
             <a href="https://github.com/miku-nyan/Overchan-Android/blob/master/Imageboards.md">Supported Imageboards</a><br>
-            <a href="http://iichan.hk/b/res/3583268.html">Official thread on iichan.hk (don't hesitate to ask in English)</a><br>
+            <a href="data/thread.html" id="ThreadLink">Official thread on iichan.hk (don't hesitate to ask in English)</a><br>
+            <script>$.getJSON('data/thread.json', function(data) { document.getElementById('ThreadLink').href = data.url; });</script>
           </p>
           
           
