--- a/ru.html
+++ b/ru.html
@@ -57,7 +57,8 @@
             <!-- <a href="yastore://details?id=nya.miku.wishmaster">Яндекс.Store</a><br> -->
             <a href="https://github.com/miku-nyan/Overchan-Android/releases">Архив версий</a><br>
             <a href="https://github.com/miku-nyan/Overchan-Android/blob/master/Imageboards.md">Поддерживаемые имиджборды</a><br>
-            <a href="http://iichan.hk/b/res/3583268.html">Официальный тред с обсуждением</a><br>
+            <a href="data/thread.html" id="ThreadLink">Официальный тред с обсуждением</a><br>
+            <script>$.getJSON('data/thread.json', function(data) { document.getElementById('ThreadLink').href = data.url; });</script>
           </p>
           
           
