--- a/de.html
+++ b/de.html
@@ -109,10 +109,10 @@
             });
           </script>
           
-          <a href="https://play.google.com/store/apps/details?id=nya.miku.wishmaster.sfw" class="button" style="background: transparent url(images/download-button-google.png) 0 0 no-repeat;">
+          <!--<a href="https://play.google.com/store/apps/details?id=nya.miku.wishmaster.sfw" class="button" style="background: transparent url(images/download-button-google.png) 0 0 no-repeat;">
             <small>GET IT ON</small>
             Google Play
-          </a>
+          </a>-->
           
           <a href="https://f-droid.org/repository/browse/?fdid=nya.miku.wishmaster" class="button" style="padding-left: 72px; background: transparent url(images/download-button-fdroid.png) 0 0 no-repeat;">
             <small>GET IT ON</small>
